--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/index.ts",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+    "migration:generate": "ts-node-dev ./node_modules/typeorm/cli.js migration:generate -d src/api/shared/typeorm/connection.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js --dataSource src/api/shared/typeorm/connection.ts"
   },
   "author": "walmir",
   "license": "ISC",
@@ -24,7 +25,7 @@
     "prettier": "^2.2.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^1.0.0",
-    "tsconfig-paths": "^3.9.0",
+    "tsconfig-paths": "^3.15.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
