:books:docs: add jwt configurations instructions to.env.example

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ USER=SEU_USER_DO_BD
 PASSWORD=SUA_SENHA
 HOST=HOST_DO_SEU_BD
 DATABASE=NOME_DO_SEU_TADABASE
+
+# configuração do seu JWT token
+JWT_SECRET=SEU_SIGNATURE
+JWT_EXPIRES_IN=TEMPO_DO_SEU_TOKEN
