--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "celebrate": "^15.0.3",
     "class-transformer": "^0.5.1",
     "date-fns": "^3.6.0",
