--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
     "swagger-ui-express": "^5.0.1",
     "tsyringe": "^4.8.0",
